--- a/proj-pokemon/css/apresentacao.css
+++ b/proj-pokemon/css/apresentacao.css
@@ -1,33 +1,47 @@
 body {
     background-color: orangered;
+    margin: 0;
+    font-family: 'Luckiest Guy', cursive;
 }
 
-main h1 {
-    position: relative;
-    color: white;
-    left: 600px;
-    top: 300px;
-    font-size: 60px;
+main{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
 }
 
 main img {
-    position: fixed;
-    top: 400px;
-    left: 350px;
+    max-width: 600px;
 }
 
-main a {
-    color: aqua;
-    position: relative;
-    left: 740px;
-    top: 550px;
-    size: 100px;
-    text-align: center;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 100px;
 }
 
-main button {
-    width: 100px;
-    height: 30px;
+.container a {
+    text-decoration: none;
+}
+
+.container img {
+    max-width: 700px;
+    margin-top: -330px;
+}
+
+.container button {
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: brown;
+    color: white;
+    font-size: 25px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;    
 }
 
 
