--- a/proj-pokemon/css/tela_inicial.css
+++ b/proj-pokemon/css/tela_inicial.css
@@ -29,10 +29,10 @@ header h1 {
     text-align: center;
     color: white;
     text-shadow: 
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000,
+    -1px -1px 0 black,
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black,
 }
 
 /* LISTAGEM DO POKEMON */ 
