--- a/proj-pokemon/css/tela_inicial.css
+++ b/proj-pokemon/css/tela_inicial.css
@@ -23,6 +23,7 @@ header {
     color: white;
     margin-bottom: 20px;
     border-radius: 8px;
+    padding: 15px;
 }
 
 header h1 {
@@ -32,7 +33,7 @@ header h1 {
     -1px -1px 0 black,
     1px -1px 0 black,
     -1px 1px 0 black,
-    1px 1px 0 black,
+    1px 1px 0 black;
 }
 
 /* LISTAGEM DO POKEMON */ 
@@ -49,7 +50,7 @@ header h1 {
     border: 1px solid cadetblue;
     padding: 15px;
     border-radius: 8px;
-    box-shadow: 2px 2px 5px solid black;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     transition: all 0.2s;
     cursor: pointer;
     text-align: center;
@@ -58,7 +59,7 @@ header h1 {
 
 .card_pokemon:hover {
     transform: translateY(-5px);
-    box-shadow: 4px 4px 10px solid black;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .card_pokemon img {
@@ -128,7 +129,7 @@ button:disabled {
     inset: 0;
     z-index: 100;
     overflow: auto;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .modal-content {
