--- a/proj-pokemon/css/tela_inicial.css
+++ b/proj-pokemon/css/tela_inicial.css
@@ -28,6 +28,7 @@ header {
 
 header h1 {
     text-align: center;
+    font-size: 80px;
     color: white;
     text-shadow: 
     -1px -1px 0 black,
