--- a/proj-pokemon/css/tela_inicial.css
+++ b/proj-pokemon/css/tela_inicial.css
@@ -1,5 +1,5 @@
 body {
-    background-color: orangered;
+    background-color:#b41d1d;
     margin: 0;
     font-family: 'Luckiest Guy', cursive;
     padding: 20px;
@@ -19,7 +19,7 @@ input[type="text"], button {
 /*CABEÇALHO E NAVETGAÇÃO */
 
 header {
-    background-color: #cc0000;
+    background-color: #1de1cd;
     color: white;
     margin-bottom: 20px;
     border-radius: 8px;
@@ -70,20 +70,27 @@ header h1 {
 
 /* BOTÕES */ 
 button:not(#botao_favoritar) {
-    border: none;
-    background-color: blueviolet;
+    border-radius: 10px;
+    border: solid 4px rgb(202, 225, 32);
+    background-color: rgb(0, 0, 0);
     color: white;
+    font-family:'Courier New';
+    font-weight: bold;
     transition: background-color 0.2s;
 } 
 
 button:hover:not(:disabled):not(#botao_favoritar) {
-    background-color: #0d329f;
+    color: rgb(223, 253, 0);
 }
 
 #botao_favoritar {
-    background-color: #ffcc00;
-    color: #333;
-    border: 1px solid #e6b800;
+    background-color: #eeff00;
+    color: #000000;
+    font-family:'Courier New';
+    font-weight: bold;
+    border: solid 3px #e60000;
+    border-radius: 10px;
+    box-shadow: 3px 3px;
 }
 
 button:disabled {
