--- a/proj-pokemon/css/tela_inicial.css
+++ b/proj-pokemon/css/tela_inicial.css
@@ -20,7 +20,6 @@ input[type="text"], button {
 
 header {
     background-color: #1de1cd;
-    color: white;
     margin-bottom: 20px;
     border-radius: 8px;
     padding: 15px;
@@ -74,8 +73,7 @@ button:not(#botao_favoritar) {
     border: solid 4px rgb(202, 225, 32);
     background-color: rgb(0, 0, 0);
     color: white;
-    font-family:'Courier New';
-    font-weight: bold;
+    font-family: 'Luckiest Guy', cursive;    font-weight: bold;
     transition: background-color 0.2s;
 } 
 
@@ -86,8 +84,7 @@ button:hover:not(:disabled):not(#botao_favoritar) {
 #botao_favoritar {
     background-color: #eeff00;
     color: #000000;
-    font-family:'Courier New';
-    font-weight: bold;
+    font-family: 'Luckiest Guy', cursive;    font-weight: bold;
     border: solid 3px #e60000;
     border-radius: 10px;
     box-shadow: 3px 3px;
